--- a/app/src/main/res/layout/fragment_nuevo_usuario.xml
+++ b/app/src/main/res/layout/fragment_nuevo_usuario.xml
@@ -33,7 +33,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:text="Nombre de Usuario" />
+        tools:text="Nombre de Usuario"
+        android:hint="Nombre de Usuario"/>
 
     <EditText
         android:id="@+id/TxtPassword"
@@ -43,11 +44,13 @@
         android:ems="10"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:textAlignment="center"
         android:textColor="#00BCD4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TxtUserName"
-        tools:text="Contraseña" />
+        tools:text="Contraseña"
+        android:hint="Contraseña"/>
 
     <EditText
         android:id="@+id/TxtNombres"
@@ -62,7 +65,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TxtPassword"
-        tools:text="Nombres" />
+        tools:text="Nombres"
+        android:hint="Nombres" />
 
     <EditText
         android:id="@+id/TxtApellidos"
@@ -77,7 +81,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TxtNombres"
-        tools:text="Apellidos" />
+        tools:text="Apellidos"
+        android:hint="Apellidos" />
 
     <EditText
         android:id="@+id/TxtEmail"
@@ -92,7 +97,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TxtApellidos"
-        tools:text="email" />
+        tools:text="email"
+        android:hint="Email"/>
 
     <Button
         android:id="@+id/BtnGuardar"
